# JChatMind-python

./: .env.test  .gitignore  README.md  architecture.md  conftest.py  docker-compose.yml  init_db.py  jchatmind_backup.dump  pyproject.toml  pytest.ini  requirements.txt  start
Skills/: requirements.txt
alembic/versions/: add_performance_indexes.py
app/: main.py
app/agents/: jchatmind_agent.py
app/agents/tools/: email_tool.py  file_processor_tool.py  knowledge_tool.py  python_executor_tool.py  skills_tool.py
app/api/: agents.py  chat.py  files.py  knowledge.py  memory.py  rag.py  sessions.py  tools.py
app/core/: config.py  database.py  logger.py
app/middleware/: __init__.py  logging_middleware.py
app/models/: __init__.py  agent.py  knowledge.py  memory.py
app/schemas/: agent.py  chat.py  knowledge.py  rag.py  session.py
app/services/: document_parser.py  llm_client.py  rag_service.py
app/services/memory/: long_term_memory_service.py  memory_scheduler.py  (+1 more)
frontend/: QUICK_START.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js  style.css
scripts/: create_test_db.sql  e2e_test.py  migrate_db.bat  setup_db.py  test_docx_convert.py  test_python_executor.py  test_sse.py
tests/: README.md  test_agent_models.py  test_agents_api.py  test_chat_api.py  test_email_tool.py  test_jchatmind_agent.py  test_knowledge_api.py  test_knowledge_tool.py  test_memory_maintenance.py  test_models.py  test_rag_service.py  test_sessions_api.py  test_skills_tool.py  test_tools_api.py
(+13 files in other folders)
