[tool.poetry]
name = "jchatmind-python"
version = "0.1.0"
description = "JChatMind - Python/LangChain version with RAG and Multi-layer Memory"
authors = ["JChatMind Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
langchain = "^0.1.10"
langchain-openai = "^0.0.8"
langchain-community = "^0.0.24"
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"
psycopg = {extras = ["binary", "pool"], version = "^3.1.18"}
pgvector = "^0.2.5"
pydantic = {extras = ["email"], version = "^2.6.1"}
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.9"
python-dotenv = "^1.0.1"
jieba = "^0.42.1"
rank-bm25 = "^0.2.2"
mistune = "^3.0.2"
openpyxl = "^3.1.2"
httpx = "^0.27.0"
aiofiles = "^23.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
black = "^24.2.0"
ruff = "^0.2.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
